--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-reanimated": "~2.3.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "^17.0.43",
+    "@types/react-native": "^0.67.3",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
